changes to support off-line-cache & webida-service-api bundle pack
 - added If-Modified-Since and If-None-Match parameter in readFile() header
   added Last-Modified and E-Tag header in readFile() response header
 - changed mode to integer from string, to reduce Stats object size
 - fixed readFile() output to be blob, always.
 - renamed 'disposable' to 'ephemeral' in workspace model
   renamed 'disposable' to 'includeEphemeral' in findWorkspaces api.
 - findProcs() now can return fore-ground child processes
 - findAlias() now can find an alias on specific path
 - removed creating webpack bundle
 - changed ignoreError parameter name to dummyFor404, more descriptive.
